@@ -10,9 +10,10 @@
 
     <!-- ADVANCE -->
     <category label="32110">
-        <!-- <setting label="32105" type="lsep" /> -->
+        <setting label="32122" type="bool" id="DeleteTempFiFilesEnabled" default="false"/>
         <setting label="32106" type="enum" id="CacheTTL" lvalues="32200|32201|32202|32203|32204|32205|32206|32207|32208|32209|32210|32211|32212|32213|32214|32215|32216|32217|32218|32219|32220|32221|32222|32223|32224|32225|32226|32227|32228|32229|32230|32231|32232|32233|32234|32235|32236|32237|32238|32239|32240|32241|32242|32243|32244|32245|32246|32247|32248|32249|32250|32251|32252|32253|32254|32255|32256|32257|32258|32259|32260|32261|32262|32263|32264|32265|32266|32267|32268|32269|32270|32271|32272|32273" default="24" />
         <setting label="32107" type="action" action="RunScript($CWD/resources/lib/clearcache.py,full)" default="" />
+        <setting type="lsep" /> -->
         <setting label="32115" type="bool" id="NetworkDetection" default="true"/>
         <setting type="lsep" />
         <setting label="32104" type="bool" id="DebugMode" default="false"/>
